// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<Img
  image="image.jpg"
  isLoaded={true}
>
  <styled.div
    isLoaded={true}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\"",
      }
    }
  >
    <div
      className="sc-bdVaJa eAwpDA"
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\"",
        }
      }
    />
  </styled.div>
</Img>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<Img
  image="image.jpg"
  isLoaded={false}
>
  <styled.div
    isLoaded={false}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\"",
      }
    }
  >
    <div
      className="sc-bdVaJa lpfHmJ"
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\"",
        }
      }
    />
  </styled.div>
</Img>
`;
